# warden-drydock

./: AGENTS.md  BOOTSTRAP.md  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: adapter-development.md  ai-assisted-setup.md  continue-in-codex.md  contributing.md  conversation-handoff.md  developer-guide.md  product-decisions.md  project-brief.md  release.md  user-guide.md
docs/adr/: 001-ai-assisted-product-interface.md  002-standalone-campaign-repositories.md  003-adapter-boundary.md
tests/: test_generator.py  test_onboarding.py
warden_drydock/: cli.py  standalone.py
warden_drydock/core/: context.py  generator.py  upgrade.py  validation.py
warden_drydock/data/adapters/mothership/00-drydock/: adapter.json  system-principles.md
warden_drydock/data/adapters/mothership/docs/: campaign-inception.md  canon-and-revelation.md  debrief-workflow.md  faction-turn-workflow.md  handout-safety.md  mothership-adapter.md  mystery-design.md  session-preparation.md  situation-design.md  world-state.md
warden_drydock/data/adapters/mothership/templates/: adventure.md  character.md  clock.md  clue.md  consequence.md  creature.md  debrief.md  faction-turn.md  faction.md  false-belief.md  (+10 more)
warden_drydock/data/project_template/: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md
warden_drydock/data/project_template/00-drydock/: ai-context.md  canon-policy.md  current-state.md
warden_drydock/data/project_template/01-campaign/: campaign-overview.md
warden_drydock/data/project_template/scripts/: drydock.py
