[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "warden-drydock"
version = "0.1.0"
description = "AI-native campaign development framework"
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"
authors = [{name = "Warden Drydock contributors"}]

[project.scripts]
drydock = "warden_drydock.cli:main"

[tool.setuptools.package-data]
warden_drydock = ["data/**/*"]
